# ch.grischamedia.inventree.shopify-inventory-sync

./: README.md  pyproject.toml
inventree/shopify_inventory_sync/: README.md  __init__.py  plugin.py  pyproject.toml  sync.py
inventree_shopify_inventory_sync/: apps.py  plugin.py  shopify_client.py  sync.py  urls.py  views.py
inventree_shopify_inventory_sync/templates/inventree_shopify_inventory_sync/: panel.html  settings.html
